references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Membership_distingushability_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:34dff512d11a5a9d142f571e66e43df2529ae4dcde5bd375b0b2eb604e204082
size 1338
